app-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etax-frontend
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etax-frontend
  template:
    metadata:
      labels:
        app: etax-frontend
    spec:
      containers:
      - name: etax-frontend
        image: etax-frontend-img:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
