app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etax-frontend-service
spec:
  selector:
    app: etax-frontend
  ports:
  - port: 3000
    targetPort: 3000
