app-deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: etax-frontend
spec:
  to:
    kind: Service
    name: etax-frontend-service
  port:
    targetPort: 3000
  wildcardPolicy: None
